--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     </head>
     <body>
-       
+      <div class="container">
         <div class="js-clock">
             <h1 class="js-title">
                 00:00
@@ -28,6 +28,6 @@
         <script src="todo.js"></script>
         <script src="bg.js"></script>
         <script src="weather.js"></script>
-      
+      </div>
     </body>
 </html>
