--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Something</title>
         <meta charset="utf-8"/>
         <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="reset.css">
 
     </head>
     <body>
